backend/vulnerability_analysis/testing/npr1/full/klee-out-0/test000009.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strlen.c
Line: 22
assembly.ll line: 9856
State: 1
Stack: 
	#000009856 in strlen(139292890365952) at libc/string/strlen.c:22
	#100007848 in create_task(139292890365952, symbolic) at final_tc/null_ptr_klee.c:15
	#200008293 in __klee_posix_wrapped_main() at final_tc/null_ptr_klee.c:47
	#300006103 in __user_main(1, 140507829239808, 140507829239824) at src/runtime/POSIX/klee_init_env.c:245
	#400000557 in __uClibc_main(140492050268160, 1, 140507829239808, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000722 in main(1, 140507829239808)
Info: 
	address: 139292890365972
	next: object at 139262288723968 of size 4
		MO7579[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
